--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"dotenv": "^16.4.5",
+		"formik": "^2.4.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.28.0",
-		"sass": "^1.81.0"
+		"sass": "^1.81.0",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
