--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.28.0",
 		"sass": "^1.81.0",
+		"socket.io-client": "^4.8.1",
 		"yup": "^1.4.0"
 	},
 	"devDependencies": {
